# dos14-polikarpov_ruslan-gitflow

./: .gitignore  Dockerfile  Dockerfile.nginx  Dockerfile.pg  Jenkinsfile  README.md  docker-compose.yml  logins.yaml  logins_sha.yaml  main.py  pyproject.toml
HW15/: pyproject.toml
ansible/: global_vars.yaml  inventory.yaml  playbook.yaml
ansible/roles/app_depencies/defaults/: main.yaml
ansible/roles/app_depencies/tasks/: main.yaml
ansible/roles/clone-git-repo/tasks/: main.yaml
ansible/roles/decrypt/: secret.yaml
ansible/roles/decrypt/tasks/: main.yaml
ansible/roles/docker/tasks/: main.yaml
ansible/roles/docker/vars/: main.yaml
ansible/roles/git/tasks/: main.yaml
ansible/roles/install_git/tasks/: main.yaml
ansible/roles/poetry/tasks/: main.yaml
ansible/roles/python/defaults/: main.yaml
ansible/roles/python/tasks/: main.yaml
ansible/roles/start_app/handlers/: main.yaml
ansible/roles/start_app/tasks/: main.yaml
ansible/roles/start_app/templates/: authn.service.j2
ansible/roles/start_app/vars/: main.yaml
ansible/roles/user/defaults/: main.yaml
ansible/roles/user/tasks/: main.yaml
ansible/roles/user/vars/: main.yaml
k8s/: .helmignore  Chart.yaml  app-chart.yaml  roles.yaml  values.yaml
k8s/env/dev/: values-dev.yaml
k8s/env/prd/: .values-prd.yaml.swp  values-prd.yaml
k8s/templates/: SAtoken.yaml  configmap-nginx.yaml  configmap.yaml  deployment.yaml  helpers.tpl  ingress.yaml  roles.yaml  service.yaml  serviceaccount.yaml
nginx-conf/: nginx.conf  server.conf
tests/: readme.txt  test_service.py
(+2 files in other folders)
