[tool.poetry]
name = "hw19"
version = "0.1.2"
description = "Home Work 19"
authors = ["RusLAN Polikarpov <ruslan.polikarpov.2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
flask = "^2.3.2"
PyJWT = "^2.7.0"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
